--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Example: San Diego</p>
           </div>
 
-          <input type="button" value="Find Food Now">
+          <input type="button" value="Find Food Now" id="cta-btn">
         </form>
       </div>
     </section>
@@ -42,6 +42,16 @@
     <img src="images/food.jpg" alt="Picture of food in a bowl">
 
   </section>
+
+  <script>
+    let btn = document.getElementById('cta-btn');
+
+    btn.addEventListener('click', () => {
+      
+    });
+
+
+  </script>
 
 </body>
 </html>
