--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+
+  <div class="overlay" id="overlay">
+    <h3>Searching now ...</h3>
+  </div>
+
   <div class="hero-bg">
     
     <section class="top">
@@ -47,7 +52,7 @@
     let btn = document.getElementById('cta-btn');
 
     btn.addEventListener('click', () => {
-      
+
     });
 
 
