continuing with JS

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 
   <script>
     let btn = document.getElementById('cta-btn');
+    
+    let overlay = document.getElementById('overlay');
 
     btn.addEventListener('click', () => {
+      
+      overlay.style.display = 'grid';
 
     });
 
