--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="overlay" id="overlay">
-    
+
     <h3>Searching now ...</h3>
 
 
@@ -58,7 +58,9 @@
 
     btn.addEventListener('click', () => {
 
-      overlay.style.display = 'grid';
+      overlay.style.display = 'grid'; // chaging the CSS dipslay property from none to grid once someone clicks on it
+      
+      overlay.classList.add('animate-overlay')
 
     });
 
